# deportation-reality

./: README.md  arrests.ipynb  ice_arrests.ipynb  main.py  pyproject.toml  sample_report.html
archive/: arrests.ipynb  graphs.ipynb  ice_arrests.ipynb
milestones/: static_draft.md
src/: create_charts.ipynb
static-viz/: report.html
