[project]
name = "deportation-reality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "vega-datasets>=0.9.0",
    "vl-convert-python>=1.8.0",
]
